--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,7 @@
   "builds": [
     {
       "src": "fama/wsgi.py",
-      "use": "@vercel/python",
-       "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+      "use": "@vercel/python@3.11"
     }
   ],
   "routes": [
