--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
   "builds": [
     {
       "src": "fama/wsgi.py",
-      "use": "@vercel/python@3.11"
+      "use": "@vercel/python"
+      
     }
   ],
   "routes": [
