--- a/requirements.txt
+++ b/requirements.txt
@@ -6,14 +6,19 @@ django-phonenumber-field==8.1.0
 django-tailwind==4.2.0
 
 celery==5.5.3
-psycopg2-binary==2.9.10  # if using Postgres
-redis==6.4.0             # if using Celery + Redis
+psycopg2-binary==2.9.10
+redis==6.4.0
 Markdown==3.9
-numpy==2.1.3
-pandas==2.3.2
-prophet==1.1.7            # forecasting library
-gluonts==0.16.2           # if using it for probabilistic forecasting
-lag-llama @ git+https://github.com/time-series-foundation-models/lag-llama.git@df7531a83a19b3c6a0222d703ca9bf59ef7a6ab9
+numpy==1.26.4  # Downgraded for compatibility
+pandas==2.2.2  # Downgraded for compatibility
+prophet==1.1.7
+
+# Use compatible torch versions
+torch==2.3.0 --index-url https://download.pytorch.org/whl/cpu
+# or for latest compatible CPU version:
+# torch --index-url https://download.pytorch.org/whl/cpu
+
+transformers==4.37.2  # Compatible version
 
 pillow==11.3.0
 scikit-learn==1.7.2
@@ -21,11 +26,8 @@ scipy==1.16.2
 
 PyJWT==2.10.1 
 requests==2.32.5
-python-decouple==3.8       # for env variables
-whitenoise==6.11.0         # static file serving
+python-decouple==3.8
+whitenoise==6.11.0
 
-torch==2.8.0+cpu           # only if needed by transformers / lag-llama
-transformers==4.56.2       # only if needed by lag-llama
-requests==2.32.5
-# Optional (for monitoring or reporting)
-
+# Remove lag-llama or find alternative as it has compatibility issues
+# lag-llama @ git+https://github.com/time-series-foundation-models/lag-llama.git@df7531a83a19b3c6a0222d703ca9bf59ef7a6ab9
