--- a/requirements.txt
+++ b/requirements.txt
@@ -9,16 +9,15 @@ celery==5.5.3
 psycopg2-binary==2.9.10
 redis==6.4.0
 Markdown==3.9
-numpy==1.26.4  # Downgraded for compatibility
-pandas==2.2.2  # Downgraded for compatibility
-prophet==1.1.7
+numpy==1.26.4  # Lighter version
+pandas==2.2.2  # Lighter version
 
-# Use compatible torch versions
-torch==2.3.0 --index-url https://download.pytorch.org/whl/cpu
-# or for latest compatible CPU version:
-# torch --index-url https://download.pytorch.org/whl/cpu
-
-transformers==4.37.2  # Compatible version
+# REMOVE these heavy packages for now:
+# prophet==1.1.7
+# gluonts==0.16.2
+# lag-llama
+# torch
+# transformers
 
 pillow==11.3.0
 scikit-learn==1.7.2
@@ -28,6 +27,3 @@ PyJWT==2.10.1
 requests==2.32.5
 python-decouple==3.8
 whitenoise==6.11.0
-
-# Remove lag-llama or find alternative as it has compatibility issues
-# lag-llama @ git+https://github.com/time-series-foundation-models/lag-llama.git@df7531a83a19b3c6a0222d703ca9bf59ef7a6ab9
