--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,10 @@
   "builds": [
     {
       "src": "fama/wsgi.py",
-      "use": "@vercel/python"
-      
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "50mb"
+      }
     }
   ],
   "routes": [
@@ -15,5 +17,11 @@
       "src": "/(.*)",
       "dest": "fama/wsgi.py"
     }
-  ]
+  ],
+  "functions": {
+    "fama/wsgi.py": {
+      "maxDuration": 30,
+      "memory": 3008
+    }
+  }
 }
