--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,23 @@
+# Core Django
 Django==5.2.6
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 django-cors-headers==4.9.0
 django-phonenumber-field==8.1.0
-django-tailwind==4.2.0
 
-celery==5.5.3
+# Database & Cache
 psycopg2-binary==2.9.10
 redis==6.4.0
-Markdown==3.9
-numpy==1.26.4  # Lighter version
-pandas==2.2.2  # Lighter version
 
-# REMOVE these heavy packages for now:
-# prophet==1.1.7
-# gluonts==0.16.2
-# lag-llama
-# torch
-# transformers
-
-pillow==11.3.0
-scikit-learn==1.7.2
-scipy==1.16.2
-
-PyJWT==2.10.1 
-requests==2.32.5
+# Essential utilities
 python-decouple==3.8
 whitenoise==6.11.0
+Pillow==11.3.0
+requests==2.32.5
+
+# Light data processing (if absolutely needed)
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.7.2
+
+# REMOVED: torch, transformers, prophet, gluonts, lag-llama
