--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 django-cors-headers==4.9.0
 django-phonenumber-field==8.1.0
+phonenumbers==9.0.15
+
 
 
 # Database & Cache
