--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ Pillow==11.3.0
 requests==2.32.5
 
 # Light data processing (if absolutely needed)
-#pandas==2.2.2
+pandas==2.2.2
 #numpy==1.26.4
 #scikit-learn==1.7.2
 
